--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,8 @@ services:
     depends_on:
       - backend
     ports:
-      - "${FRONTEND_PORT:-8080}:80"
+      - "443:443"
+     #- "${FRONTEND_PORT:-8080}:80"
     environment:
       REACT_APP_BACKEND_URL: ${REACT_APP_BACKEND_URL:-http://localhost:3000}
     #volumes:
