--- a/interview-helper-frontend/Dockerfile
+++ b/interview-helper-frontend/Dockerfile
@@ -23,5 +23,9 @@ COPY --from=builder /usr/src/frontend/dist /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY interview-helper-frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 80
+# Copy self-signed certs
+COPY certs/fullchain.pem /etc/ssl/certs/fullchain.pem
+COPY certs/privkey.pem /etc/ssl/private/privkey.pem
+
+EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
