--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,9 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@admin.com}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_SERVER_MODE: "True"
+      PGADMIN_LISTEN_PORT: 80
+      PGADMIN_SCRIPT_NAME: "/youcantseeme"
     ports:
       - "8080:80"
     volumes:
