--- a/interview-helper-frontend/nginx.conf
+++ b/interview-helper-frontend/nginx.conf
@@ -42,15 +42,19 @@ server {
 
       # pgAdmin proxy
     location /youcantseeme/ {
-        proxy_pass http://pgadmin:80/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_pass http://pgadmin:80/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_redirect / /youcantseeme/;
+      # Critical header pgAdmin needs for subpath
+      proxy_set_header X-Script-Name /youcantseeme;
+
+      # Fix redirects
+      proxy_redirect / /youcantseeme/;
     }
-}
+} 
 
 
 
