--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build]
   base = "interview-helper-frontend"
-  command = "npm run build"
-  publish = ".next"
+  command = "npm install && npm run build"
+  publish = "interview-helper-frontend/.next"
 
 [build.environment]
+  NODE_VERSION = "18"
   NEXT_TELEMETRY_DISABLED = "1"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
