--- a/interview-helper-frontend/nginx.conf
+++ b/interview-helper-frontend/nginx.conf
@@ -32,12 +32,27 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    #location /api/ {
+    #    proxy_pass http://backend:3000/;
+    #    proxy_set_header Host $host;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #    proxy_set_header X-Forwarded-Proto $scheme;
+    #}
+
     location /api/ {
-        proxy_pass http://backend:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+      if ($request_method = OPTIONS) {
+          add_header 'Access-Control-Allow-Origin' '*';
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+          add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Authorization';
+          return 204;
+      }
+
+      proxy_pass http://backend:3000/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
       # pgAdmin proxy
