--- a/interview-helper-frontend/nginx.conf
+++ b/interview-helper-frontend/nginx.conf
@@ -41,18 +41,16 @@ server {
     #}
 
     location /api/ {
+      add_header 'Access-Control-Allow-Origin' 'https://interview-sim.netlify.app';
+      add_header 'Access-Control-Allow-Credentials' 'true';
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+      add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Authorization';
+
       if ($request_method = OPTIONS) {
-          add_header 'Access-Control-Allow-Origin' '*';
-          add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-          add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Authorization';
           return 204;
       }
 
       proxy_pass http://backend:3000/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
       # pgAdmin proxy
