--- a/interview-helper-frontend/nginx.conf
+++ b/interview-helper-frontend/nginx.conf
@@ -42,27 +42,19 @@ server {
 
     location /api/ {
       proxy_pass http://backend:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
 
-        # Allow CORS headers for frontend
-        add_header 'Access-Control-Allow-Origin' 'https://interview-sim.netlify.app';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Authorization';
-
-        # Handle OPTIONS preflight
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
+      # Remove add_header CORS lines
+      # Express will set correct CORS headers
     }
 
-      # pgAdmin proxy
+    # pgAdmin proxy
     location /youcantseeme/ {
       proxy_pass http://pgadmin:80/;
       proxy_set_header Host $host;
