--- a/interview-helper-frontend/Dockerfile
+++ b/interview-helper-frontend/Dockerfile
@@ -24,8 +24,8 @@ RUN rm /etc/nginx/conf.d/default.conf
 COPY interview-helper-frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy self-signed certs
-COPY ./certs/fullchain.pem /etc/ssl/certs/fullchain.pem
-COPY ./certs/privkey.pem /etc/ssl/private/privkey.pem
+#COPY ./certs/fullchain.pem /etc/ssl/certs/fullchain.pem
+#COPY ./certs/privkey.pem /etc/ssl/private/privkey.pem
 
 EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
