commenter ssl cert

--- a/interview-helper-frontend/Dockerfile copy
+++ b/interview-helper-frontend/Dockerfile copy
@@ -3,11 +3,11 @@ FROM node:20-alpine AS builder
 WORKDIR /usr/src/frontend
 
 # Install deps
-COPY ./package.json ./package-lock.json ./
+COPY interview-helper-frontend/package.json interview-helper-frontend/package-lock.json ./
 RUN npm ci --silent
 
 # Copy rest of the frontend code
-COPY ./ ./
+COPY interview-helper-frontend/ ./
 
 # Build (adjust if using yarn or pnpm)
 ARG REACT_APP_BACKEND_URL
@@ -21,7 +21,7 @@ COPY --from=builder /usr/src/frontend/dist /usr/share/nginx/html
 
 # Remove default config and use a basic one (optional: add custom config)
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+COPY interview-helper-frontend/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy self-signed certs
 #COPY ./certs/fullchain.pem /etc/ssl/certs/fullchain.pem
